# magnetic-field-measurement

./: extractpoints.py  plot.py  pyproject.toml  read.py  realtimeplot.py
data/: data_20210712_191745.csv  data_lattice_point.csv
magnetic_field_measurement/: init_ports.py  sensor_receiver.py  stepper.py
