[tool.poetry]
name = "magnetic-field-measurement"
version = "0.1.0"
description = ""
authors = ["ORyomei <o.ryomei1020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
