[tool.poetry]
name = "magnetic-field-measurement"
version = "0.1.0"
description = ""
authors = ["ORyomei <o.ryomei1020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyVISA = "^1.11.3"
PyVISA-py = "^0.5.2"
pyserial = "^3.5"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
